# GxAny

./: CMakeLists.txt  LICENSE.txt  README-zh.md  README.md
gany-c-api/: CMakeLists.txt
gany-c-api/include/gx/: gany_c_api.h  reg_gany_c_module.h
gany-c-api/src/: gany_c_api.cpp  reg_gany_c_module.cpp
gany-core/: CMakeLists.txt
gany-core/cmake/: gany-core.cmake
gany-core/include/gx/: gany_core.h  sstring.h
gany-core/src/: gany_core.cpp  gany_env_object.h  gany_iterator.h  gany_pfn_impl.cpp  gany_pfn_impl.h  ref_gstring.cpp  ref_gstring.h
gany-interface/: CMakeLists.txt
gany-interface/cmake/: gany-interface.cmake
gany-interface/include/gx/: base.h  common.h  enum.h  gany.h  gany_module_def.h  gany_pfn.h  gglobal.h  gmutex.h  graii.h  gstring.h  platform.h
test/: CMakeLists.txt
test/src/: test_enum.cpp  test_gany.cpp  test_main.cpp  test_reflection.cpp  test_type.cpp
